[project]
name = "chatbilling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.12",
    "langchain-mistralai>=1.1.2",
    "langchain-openai>=1.1.11",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff>=0.15.6",
]
